force-app/main/default/objects/Coupon__c/Coupon__c.object-meta.xml
<CustomObject>
    <description>Custom object to store pre-generated and post-generated coupon records.</description>
    <label>Voucher</label>
    <nameField>
        <label>Voucher Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vouchers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>