force-app/main/default/objects/Coupon__c/fields/Actual_Coupon_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Coupon_Expired_Date__c</fullName>
    <formula>Coupon_Expired_Date__c +2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Voucher Expired Date</label>
    <type>Date</type>
</CustomField>