force-app/main/default/objects/Coupon__c/fields/Base64_No_from_iPOS_No__c.field-meta.xml
<CustomField>
    <fullName>Base64_No_from_iPOS_No__c</fullName>
    <label>Base64 No. from iPOS No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>