force-app/main/default/objects/Coupon__c/fields/BATCH_No__c.field-meta.xml
<CustomField>
    <fullName>BATCH_No__c</fullName>
    <label>BATCH No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>