force-app/main/default/objects/Coupon__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Coupon</relationshipName>
    <type>Lookup</type>
</CustomField>