force-app/main/default/objects/Coupon__c/fields/Convert_to_Mileages__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_Mileages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert to Mileages</label>
    <type>Checkbox</type>
</CustomField>