force-app/main/default/objects/Coupon__c/fields/Coupon_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Created_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Created Date</label>
    <type>Date</type>
</CustomField>