force-app/main/default/objects/Coupon__c/fields/Coupon_Currency__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Currency__c</fullName>
    <label>Voucher Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>