force-app/main/default/objects/Coupon__c/fields/Coupon_Distributed_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Distributed_Date__c</fullName>
    <label>Voucher Distributed Date</label>
    <type>Date</type>
</CustomField>