force-app/main/default/objects/Coupon__c/fields/Coupon_Distributed_to_Agent_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Distributed_to_Agent_Date__c</fullName>
    <label>Voucher Distributed to Agent Date</label>
    <type>Date</type>
</CustomField>