force-app/main/default/objects/Coupon__c/fields/Coupon_Distributed_to_Cabin_Crew_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Distributed_to_Cabin_Crew_Date__c</fullName>
    <description>Coupon Distributed to Cabin Crew Date</description>
    <label>Voucher Distributed to Cabin Crew Date</label>
    <type>Date</type>
</CustomField>