force-app/main/default/objects/Coupon__c/fields/Coupon_Distributed_to_Cabin_Crew_ID__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Distributed_to_Cabin_Crew_ID__c</fullName>
    <description>Coupon Distributed to Cabin Crew ID</description>
    <label>Voucher Distributed to Cabin Crew ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>