force-app/main/default/objects/Coupon__c/fields/Coupon_Distributed_to_Cabin_Crew_Name__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Distributed_to_Cabin_Crew_Name__c</fullName>
    <description>Coupon Distributed to Cabin Crew Name</description>
    <label>Voucher Distributed to Cabin Crew Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>