force-app/main/default/objects/Coupon__c/fields/Coupon_Expired__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Expired__c</fullName>
    <formula>IF(TODAY() &gt;=  Coupon_Expired_Date__c +2 , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Expired</label>
    <type>Checkbox</type>
</CustomField>