force-app/main/default/objects/Coupon__c/fields/Coupon_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Expired_Date__c</fullName>
    <formula>ADDMONTHS(Coupon_Issued_Date__c,12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Expired Date</label>
    <type>Date</type>
</CustomField>