force-app/main/default/objects/Coupon__c/fields/Coupon_Issued_but_Voided_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Issued_but_Voided_Date__c</fullName>
    <label>Voucher Issued but Voided Date</label>
    <type>Date</type>
</CustomField>