force-app/main/default/objects/Coupon__c/fields/Coupon_Number_for_iPOS__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Number_for_iPOS__c</fullName>
    <formula>Name &amp; &quot;|&quot; &amp;  TEXT(Coupon_Value__c) &amp; &quot;|&quot; &amp; TEXT(Coupon_Checksum__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Number for iPOS</label>
    <type>Text</type>
</CustomField>