force-app/main/default/objects/Coupon__c/fields/Coupon_Status__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Status__c</fullName>
    <label>Voucher Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Coupon_Status</valueSetName>
    </valueSet>
</CustomField>