force-app/main/default/objects/Coupon__c/fields/Coupon_Type__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Type__c</fullName>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ondemand</fullName>
            </value>
            <value>
                <fullName>Pre-Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>