force-app/main/default/objects/Coupon__c/fields/Coupon_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Used_Date__c</fullName>
    <label>Voucher Used Date</label>
    <type>Date</type>
</CustomField>