force-app/main/default/objects/Coupon__c/fields/Coupon_Used_On__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Used_On__c</fullName>
    <label>Voucher Used On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket</fullName>
            </value>
            <value>
                <fullName>EMD</fullName>
            </value>
            <value>
                <fullName>Mileage</fullName>
            </value>
            <value>
                <fullName>Duty Free</fullName>
            </value>
            <value>
                <fullName>STARLUX Shop</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>