force-app/main/default/objects/Coupon__c/fields/Coupon_Value__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Value__c</fullName>
    <label>Voucher Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>