force-app/main/default/objects/Coupon__c/fields/Coupon_Voided_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Voided_Date__c</fullName>
    <label>Voucher Voided Date</label>
    <type>Date</type>
</CustomField>