force-app/main/default/objects/Coupon__c/fields/CPN_Used_on_EMD_No__c.field-meta.xml
<CustomField>
    <fullName>CPN_Used_on_EMD_No__c</fullName>
    <label>VCHR Used on EMD No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>