force-app/main/default/objects/Coupon__c/fields/Distributed_Agent__c.field-meta.xml
<CustomField>
    <fullName>Distributed_Agent__c</fullName>
    <label>Voucher Distribute to Agent(Employee ID)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>