force-app/main/default/objects/Coupon__c/fields/Distribution_Department__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Department__c</fullName>
    <label>Voucher Distributed to Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>