force-app/main/default/objects/Coupon__c/fields/Issued_Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Issued_Passenger_Name__c</fullName>
    <label>Issued Passenger Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>