force-app/main/default/objects/Coupon__c/fields/Issuing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Agent__c</fullName>
    <label>Issuing Agent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>