force-app/main/default/objects/Coupon__c/fields/Mileage_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Equivalent__c</fullName>
    <label>Mileage Equivalent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>