force-app/main/default/objects/Coupon__c/fields/New_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Ticket_Number__c</fullName>
    <label>New Ticket Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>