force-app/main/default/objects/Coupon__c/fields/Received_By__c.field-meta.xml
<CustomField>
    <fullName>Received_By__c</fullName>
    <inlineHelpText>ex. Angela Hsu</inlineHelpText>
    <label>Received By</label>
    <type>TextArea</type>
</CustomField>