force-app/main/default/objects/Coupon__c/fields/Redeem_Station__c.field-meta.xml
<CustomField>
    <fullName>Redeem_Station__c</fullName>
    <label>Redeem Station</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airport_Code_US_Group</valueSetName>
    </valueSet>
</CustomField>