force-app/main/default/objects/Coupon__c/fields/Value_Equivalent_to_Mileages__c.field-meta.xml
<CustomField>
    <fullName>Value_Equivalent_to_Mileages__c</fullName>
    <label>Value Equivalent to Mileages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>