force-app/main/default/objects/Coupon__c/fields/Voucher_Category__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Category__c</fullName>
    <label>Voucher Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STARLUX Voucher</fullName>
                <default>true</default>
                <label>STARLUX Voucher</label>
            </value>
            <value>
                <fullName>Laundry Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>