force-app/main/default/objects/Coupon__c/recordTypes/Unused_Coupons.recordType-meta.xml
<RecordType>
    <fullName>Unused_Coupons</fullName>
    <active>true</active>
    <label>Unused Vouchers</label>
</RecordType>