force-app/main/default/objects/Coupon__c/recordTypes/Used_Coupons.recordType-meta.xml
<RecordType>
    <fullName>Used_Coupons</fullName>
    <active>true</active>
    <label>Used Vouchers</label>
</RecordType>