force-app/main/default/objects/Coupon__c/validationRules/Airport_Required_Fields_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Airport_Required_Fields_3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL (Coupon_Status__c , &quot;Distributed&quot;),
ISPICKVAL (Coupon_Status__c , &quot;Issued&quot;)),
ISPICKVAL( Voucher_Category__c , &quot;Laundry Voucher&quot;),
OR(CONTAINS($Profile.Name, &quot;AOS&quot;),
CONTAINS($Profile.Name, &quot;Airport&quot;)),
ISBLANK( Received_By__c ))</errorConditionFormula>
    <errorDisplayField>Received_By__c</errorDisplayField>
    <errorMessage>This Field is Mandatory when Voucher Status is Distributed and Issued.</errorMessage>
</ValidationRule>