force-app/main/default/objects/Coupon__c/validationRules/Coupon_Cannot_Change_Coupon_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Cannot_Change_Coupon_Number</fullName>
    <active>true</active>
    <description>Coupon Number cannot be changed once generated</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;
ISCHANGED( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Coupon Number cannot be changed.</errorMessage>
</ValidationRule>