force-app/main/default/objects/Coupon__c/validationRules/Coupon_Cannot_Change_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Cannot_Change_User</fullName>
    <active>true</active>
    <description>Coupon Cannot Change User</description>
    <errorConditionFormula>$User.Id &lt;&gt; &quot;00520000001GfwQ&quot; &amp;&amp; ISCHANGED( OwnerId )</errorConditionFormula>
    <errorMessage>Coupon Cannot Change User</errorMessage>
</ValidationRule>