force-app/main/default/objects/Coupon__c/validationRules/Coupon_Distributed_Date_and_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Distributed_Date_and_Status</fullName>
    <active>true</active>
    <description>If Status is not Distributed, distributed date, distributed department and distributed Agent should not be changed</description>
    <errorConditionFormula>NOT(ISPICKVAL( Coupon_Status__c, &quot;Distributed&quot; )) &amp;&amp;
(
ISCHANGED( Coupon_Distributed_Date__c ) ||
ISCHANGED( Distribution_Department__c ) ||
ISCHANGED( Distributed_Agent__c ) ||
ISCHANGED( Coupon_Distributed_to_Agent_Date__c )
)</errorConditionFormula>
    <errorMessage>Coupon Distributed Date, Distributed Department and Distributed Agent can only be set when setting the Coupon Status to Distributed</errorMessage>
</ValidationRule>