force-app/main/default/objects/Coupon__c/validationRules/Coupon_Distributed_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Distributed_Date_is_Required</fullName>
    <active>true</active>
    <description>Coupon distributed date, distributed department, agent ID and distributed to agent date is required when the status is updated to Distributed</description>
    <errorConditionFormula>ISPICKVAL(Coupon_Status__c, &quot;Distributed&quot;) &amp;&amp;
(
   ISBLANK( Coupon_Distributed_Date__c ) ||
   ISBLANK(TEXT(Distribution_Department__c)) ||
   ISBLANK( Distributed_Agent__c ) ||
   ISBLANK( Coupon_Distributed_to_Agent_Date__c )
)</errorConditionFormula>
    <errorMessage>Please enter the Coupon Distributed Date, Distributed Department, Agent ID and Distributed to Agent Date.</errorMessage>
</ValidationRule>