force-app/main/default/objects/Coupon__c/validationRules/Coupon_Distributed_to_Agent_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Distributed_to_Agent_Date</fullName>
    <active>true</active>
    <description>Coupon Distributed to Agent Date is required if coupon distributed to agent is set</description>
    <errorConditionFormula>NOT(ISBLANK(Distributed_Agent__c)) &amp;&amp;
ISBLANK(Coupon_Distributed_to_Agent_Date__c)</errorConditionFormula>
    <errorDisplayField>Coupon_Distributed_to_Agent_Date__c</errorDisplayField>
    <errorMessage>Please enter the Coupon Distributed to Agent Date when the Coupon Distributed to Agent is filled up.</errorMessage>
</ValidationRule>