force-app/main/default/objects/Coupon__c/validationRules/Coupon_Distributed_to_Agent_Date_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Distributed_to_Agent_Date_Change</fullName>
    <active>true</active>
    <description>Coupon Distributed to Agent Date cannot be modified after data entry</description>
    <errorConditionFormula>NOT(ISBLANK(PRIORVALUE( Coupon_Distributed_to_Agent_Date__c ))) &amp;&amp; ISCHANGED( Coupon_Distributed_to_Agent_Date__c )</errorConditionFormula>
    <errorDisplayField>Coupon_Distributed_to_Agent_Date__c</errorDisplayField>
    <errorMessage>Coupon Distributed to Agent Date cannot be modified once it is entered.</errorMessage>
</ValidationRule>