force-app/main/default/objects/Coupon__c/validationRules/Coupon_Distributed_to_Agent_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Distributed_to_Agent_Date_Range</fullName>
    <active>true</active>
    <description>Coupon Distributed to Agent Date cannot be earlier than Coupon Created or Distributed Date and cannot be later than modified Date.</description>
    <errorConditionFormula>Coupon_Distributed_to_Agent_Date__c &lt; Coupon_Created_Date__c ||
Coupon_Distributed_to_Agent_Date__c &lt; Coupon_Distributed_Date__c ||
Coupon_Distributed_to_Agent_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Coupon_Distributed_to_Agent_Date__c</errorDisplayField>
    <errorMessage>Coupon Distributed to Agent Date cannot be earlier than Coupon Created or Distributed Date and cannot be later than modified Date.</errorMessage>
</ValidationRule>