force-app/main/default/objects/Coupon__c/validationRules/Coupon_EMD_No_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_EMD_No_is_Required</fullName>
    <active>true</active>
    <description>EMD number is required if coupon is used for EMD</description>
    <errorConditionFormula>ISPICKVAL( Coupon_Used_On__c, &quot;EMD&quot; ) &amp;&amp;
( ISBLANK( CPN_Used_on_EMD_No__c ) || ISBLANK(  Coupon_Used_Date__c ))</errorConditionFormula>
    <errorDisplayField>CPN_Used_on_EMD_No__c</errorDisplayField>
    <errorMessage>Please enter the EMD No. that the coupon is used on</errorMessage>
</ValidationRule>