force-app/main/default/objects/Coupon__c/validationRules/Coupon_Employee_ID_7_Digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Employee_ID_7_Digit</fullName>
    <active>true</active>
    <description>Employee ID format must only be 7 digit</description>
    <errorConditionFormula>NOT(ISBLANK( Distributed_Agent__c )) &amp;&amp;
NOT(REGEX( Distributed_Agent__c , &quot;[0-9]{7}&quot;))</errorConditionFormula>
    <errorMessage>Employee ID format must only be 7 digit</errorMessage>
</ValidationRule>