force-app/main/default/objects/Coupon__c/validationRules/Coupon_Has_Expired.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Has_Expired</fullName>
    <active>true</active>
    <description>Expired Coupon Cannot be used</description>
    <errorConditionFormula>Coupon_Used_Date__c &gt; Coupon_Issued_Date__c + VALUE($Label.Coupon_Expiry_Period)</errorConditionFormula>
    <errorMessage>Expired Coupon cannot be used</errorMessage>
</ValidationRule>