force-app/main/default/objects/Coupon__c/validationRules/Coupon_Issued_But_Void_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Issued_But_Void_Date_is_Required</fullName>
    <active>true</active>
    <description>Coupon issued but voided date is required when the status is updated to Issued but Voided</description>
    <errorConditionFormula>ISPICKVAL(Coupon_Status__c, &quot;Issued but Voided&quot;) &amp;&amp;
ISBLANK( Coupon_Issued_but_Voided_Date__c  )</errorConditionFormula>
    <errorDisplayField>Coupon_Issued_but_Voided_Date__c</errorDisplayField>
    <errorMessage>Please enter the Coupon Issued but Voided Date</errorMessage>
</ValidationRule>