force-app/main/default/objects/Coupon__c/validationRules/Coupon_Issued_but_Voided_Date_and_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Issued_but_Voided_Date_and_Status</fullName>
    <active>true</active>
    <description>If Status is not Issued but Voided, issued but voided date should not be changed</description>
    <errorConditionFormula>NOT(ISPICKVAL( Coupon_Status__c, &quot;Issued but Voided&quot; )) &amp;&amp;
ISCHANGED( Coupon_Issued_but_Voided_Date__c )</errorConditionFormula>
    <errorMessage>Coupon Issued but Voided Date can only be set when setting the Coupon Status to Issued but Voided</errorMessage>
</ValidationRule>