force-app/main/default/objects/Coupon__c/validationRules/Coupon_Issued_Date_and_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Issued_Date_and_Status</fullName>
    <active>false</active>
    <description>If Status is not Issued, issued date should not be changed</description>
    <errorConditionFormula>NOT(ISPICKVAL( Coupon_Status__c, &quot;Issued&quot; )) &amp;&amp;
ISCHANGED( Coupon_Issued_Date__c )</errorConditionFormula>
    <errorMessage>Coupon Issued Date can only be set when setting the Coupon Status to Issued</errorMessage>
</ValidationRule>