force-app/main/default/objects/Coupon__c/validationRules/Coupon_Issued_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Issued_Date_is_Required</fullName>
    <active>true</active>
    <description>Coupon issued date is required when the status is updated to Issued</description>
    <errorConditionFormula>ISPICKVAL(Coupon_Status__c, &quot;Issued&quot;) &amp;&amp;
ISBLANK( Coupon_Issued_Date__c )</errorConditionFormula>
    <errorDisplayField>Coupon_Issued_Date__c</errorDisplayField>
    <errorMessage>Please enter the Coupon Issued Date</errorMessage>
</ValidationRule>