force-app/main/default/objects/Coupon__c/validationRules/Coupon_Issued_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Issued_Date_Range</fullName>
    <active>true</active>
    <description>Coupon Issued Date cannot be earlier than Coupon Distributed to Agent Date and cannot be later than modified Date.</description>
    <errorConditionFormula>Coupon_Issued_Date__c &lt; Coupon_Distributed_to_Agent_Date__c ||
Coupon_Issued_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Coupon_Issued_Date__c</errorDisplayField>
    <errorMessage>Coupon Issued Date cannot be earlier than Coupon Distributed to Agent Date and cannot be later than modified Date.</errorMessage>
</ValidationRule>