force-app/main/default/objects/Coupon__c/validationRules/Coupon_Mileage_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Mileage_is_Required</fullName>
    <active>true</active>
    <description>Mileage equivalent is required if coupon is used for mileage</description>
    <errorConditionFormula>ISPICKVAL( Coupon_Used_On__c, &quot;Mileage&quot; ) &amp;&amp;
ISBLANK( Mileage_Equivalent__c )</errorConditionFormula>
    <errorDisplayField>Mileage_Equivalent__c</errorDisplayField>
    <errorMessage>Please enter the equivalent mileage points</errorMessage>
</ValidationRule>