force-app/main/default/objects/Coupon__c/validationRules/Coupon_Status_Dates_Cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Status_Dates_Cannot_Change</fullName>
    <active>true</active>
    <description>Following dates cannot be changed once it is set:
- Coupon Issued Date
- Coupon Distributed Date
- Coupon Issued but Voided Date
- Coupon Unissued but Voided Date
- Coupon Used Date
- Coupon Voided Date</description>
    <errorConditionFormula>OR
(
  (
    ISPICKVAL( Coupon_Status__c, &quot;Distributed&quot;) &amp;&amp;
    NOT(ISBLANK(PRIORVALUE(Coupon_Distributed_Date__c))) &amp;&amp;
    (
      ISCHANGED( Coupon_Distributed_Date__c ) ||
      ISCHANGED( Distribution_Department__c )
    )
  ),
  (
    ISPICKVAL( Coupon_Status__c, &quot;Issued&quot;) &amp;&amp;
    NOT(ISBLANK(PRIORVALUE(Coupon_Issued_Date__c))) &amp;&amp;
    ISCHANGED( Coupon_Issued_Date__c )
  ),
  (
    ISPICKVAL( Coupon_Status__c, &quot;Issued but Voided&quot;) &amp;&amp;
    NOT(ISBLANK(PRIORVALUE(Coupon_Issued_but_Voided_Date__c ))) &amp;&amp;
    ISCHANGED( Coupon_Issued_but_Voided_Date__c )
  ),
  (
    ISPICKVAL( Coupon_Status__c, &quot;Unissued but Voided&quot;) &amp;&amp;
    NOT(ISBLANK(PRIORVALUE(Coupon_Unissued_but_Voided_Date__c ))) &amp;&amp;
    ISCHANGED( Coupon_Unissued_but_Voided_Date__c )
  ),
  (
    ISPICKVAL( Coupon_Status__c, &quot;Used&quot;) &amp;&amp;
    NOT(ISBLANK(PRIORVALUE(Coupon_Used_Date__c))) &amp;&amp;
    (    
      ISCHANGED( Coupon_Used_Date__c ) ||
      ISCHANGED( Coupon_Used_On__c ) 
    )
  )
)</errorConditionFormula>
    <errorMessage>Status date and the related fields(Distributed Department, Coupon Used On) cannot be modified once it is set.</errorMessage>
</ValidationRule>