force-app/main/default/objects/Coupon__c/validationRules/Coupon_Ticket_No_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_Ticket_No_is_Required</fullName>
    <active>true</active>
    <description>Ticket number is required if coupon is used for ticket</description>
    <errorConditionFormula>ISPICKVAL( Coupon_Used_On__c, &quot;Ticket&quot; ) &amp;&amp;
ISBLANK( CPN_Used_on_TKT_No__c )</errorConditionFormula>
    <errorDisplayField>CPN_Used_on_TKT_No__c</errorDisplayField>
    <errorMessage>Please enter the ticket number that the coupon is used on</errorMessage>
</ValidationRule>